--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="" />
   </head>
   <body>
-    <h1>Rock-Paper-Scissors-Console Version</h1>
+    <h1>Rock-Paper-Scissors (Console Version)</h1>
     <script src="script.js" async defer></script>
   </body>
 </html>
